--- a/EloRationAEBit/packages.config
+++ b/EloRationAEBit/packages.config
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="4.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net452" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net452" />
+  <package id="Telegram.Bot" version="14.8.0" targetFramework="net452" />
 </packages>
